--- a/jjb/ci-management.yaml
+++ b/jjb/ci-management.yaml
@@ -16,6 +16,7 @@
           url: git@github.com:lfit/github-test-jjb.git
           credentials-id: 'odpi-jenkins-test-jjb'
           refspec: '+refs/pull/*:refs/remotes/origin/pr/*'
+          branch: '+refs/heads/*:refs/remotes/origin/* +refs/pull/*:refs/remotes/origin/pr/*+refs/heads/*:refs/remotes/origin/* +refs/pull/*:refs/remotes/origin/pr/*'
 
     triggers:
       - github-pull-request:
