--- a/jjb/ci-management.yaml
+++ b/jjb/ci-management.yaml
@@ -26,3 +26,5 @@
           github-hooks: true
           permit-all: true
           auto-close-on-fail: false
+          white-list:
+            - JPWKU
